# FTXUI

./: CHANGELOG.md  CMakeLists.txt  component_8hpp_source.html  component__fuzzer_8cpp_source.html  examples_2component_2flexbox_gallery_8cpp-example.html  examples_2component_2homescreen_8cpp-example.html  examples_2component_2resizable_split_8cpp-example.html  examples_2component_2textarea_8cpp-example.html  index.html  namespaceftxui.html  resizable__split_8cpp_source.html
examples/component/: ftxui_example_flexbox_gallery.wasm  ftxui_example_homescreen.wasm  ftxui_example_resizable_split.js  ftxui_example_resizable_split.wasm  ftxui_example_textarea.js  ftxui_example_textarea.wasm
src/ftxui/component/: screen_interactive.cpp
